force-app/main/default/objects/Contact/fields/dsfsd__c.field-meta.xml
<CustomField>
    <fullName>dsfsd__c</fullName>
    <label>dsfsd</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>