force-app/main/default/objects/Contact/fields/hdgfadhfkhaf__c.field-meta.xml
<CustomField>
    <fullName>hdgfadhfkhaf__c</fullName>
    <label>hdgfadhfkhaf</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>