force-app/main/default/objects/Contact/fields/Lik__c.field-meta.xml
<CustomField>
    <fullName>Lik__c</fullName>
    <label>Lik</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>