force-app/main/default/objects/Contact/fields/likelihood111__c.field-meta.xml
<CustomField>
    <fullName>likelihood111__c</fullName>
    <label>likelihood111</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>