force-app/main/default/objects/Contact/fields/likelihood123__c.field-meta.xml
<CustomField>
    <fullName>likelihood123__c</fullName>
    <label>likelihood123</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>