force-app/main/default/objects/Contact/fields/Likelihood1__c.field-meta.xml
<CustomField>
    <fullName>Likelihood1__c</fullName>
    <label>Likelihood1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>