force-app/main/default/objects/Contact/fields/likelihood_22__c.field-meta.xml
<CustomField>
    <fullName>likelihood_22__c</fullName>
    <label>likelihood 22</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>