force-app/main/default/objects/Contact/fields/Likelihood_upgrade__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_upgrade__c</fullName>
    <label>Likelihood_upgrade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>