force-app/main/default/objects/Contact/fields/LikelihoodToUpgrade__c.field-meta.xml
<CustomField>
    <fullName>LikelihoodToUpgrade__c</fullName>
    <label>Likelihood To Upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>