force-app/main/default/objects/Contact/fields/Membership_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Membership_Likelihood__c</fullName>
    <label>Membership Likelihood</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>