force-app/main/default/objects/Contact/fields/test12__c.field-meta.xml
<CustomField>
    <fullName>test12__c</fullName>
    <label>test12</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>