force-app/main/default/objects/Contact/fields/test2__c.field-meta.xml
<CustomField>
    <fullName>test2__c</fullName>
    <label>test2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>