force-app/main/default/objects/Contact/fields/test8__c.field-meta.xml
<CustomField>
    <fullName>test8__c</fullName>
    <label>test8</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>