force-app/main/default/objects/Contact/fields/test_filed__c.field-meta.xml
<CustomField>
    <fullName>test_filed__c</fullName>
    <label>test filed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>