force-app/main/default/objects/Contact/fields/Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Upgrade__c</fullName>
    <label>Upgrade_</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>