force-app/main/default/objects/Contact/fields/Upgrade_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Likelihood__c</fullName>
    <label>Upgrade Likelihood</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>